--- a/environment/runtime/o2b-crossplane-providers/providers.yaml
+++ b/environment/runtime/o2b-crossplane-providers/providers.yaml
@@ -2,10 +2,10 @@
 # apiVersion: pkg.crossplane.io/v1
 # kind: Provider
 # metadata:
-#   name: provider-azure-upbound
+#   name: provider-azure
 # spec:
 #   package: xpkg.upbound.io/upbound/provider-azure:v0.29.0
-
+    
 # ---
 # apiVersion: pkg.crossplane.io/v1
 # kind: Provider
@@ -26,28 +26,17 @@
 # apiVersion: pkg.crossplane.io/v1
 # kind: Provider
 # metadata:
-#   name: provider-aws-upbound
+#   name: upbound-provider-aws
 # spec:
-#   package: xpkg.upbound.io/upbound/provider-aws:v0.33.0
-
-# ---
-# apiVersion: pkg.crossplane.io/v1alpha1
-# kind: ControllerConfig
-# metadata:
-#   name: debug-config
-# spec:
-#   args:
-#     - --debug
+#   package: xpkg.upbound.io/upbound/provider-aws:v0.27.0
 
 # ---
 # apiVersion: pkg.crossplane.io/v1
 # kind: Provider
 # metadata:
-#   name: provider-gcp-upbound
+#   name: provider-gcp
 # spec:
 #   package: xpkg.upbound.io/upbound/provider-gcp:v0.29.0
-#   controllerConfigRef:
-#     name: debug-config
 
 # ---
 # apiVersion: pkg.crossplane.io/v1
