--- a/environment/runtime/o2b-crossplane-providers/providers.yaml
+++ b/environment/runtime/o2b-crossplane-providers/providers.yaml
@@ -1,10 +1,10 @@
-# ---
-# apiVersion: pkg.crossplane.io/v1
-# kind: Provider
-# metadata:
-#   name: provider-azure
-# spec:
-#   package: xpkg.upbound.io/upbound/provider-azure:v0.29.0
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-azure
+spec:
+  package: xpkg.upbound.io/upbound/provider-azure:v0.29.0
     
 # ---
 # apiVersion: pkg.crossplane.io/v1
@@ -22,13 +22,13 @@
 # spec:
 #   package: xpkg.upbound.io/crossplane-contrib/provider-aws:v0.38.0
 
-# ---
-# apiVersion: pkg.crossplane.io/v1
-# kind: Provider
-# metadata:
-#   name: upbound-provider-aws
-# spec:
-#   package: xpkg.upbound.io/upbound/provider-aws:v0.27.0
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-aws
+spec:
+  package: xpkg.upbound.io/upbound/provider-aws:v0.27.0
 
 ---
 apiVersion: pkg.crossplane.io/v1
